--- a/index.html
+++ b/index.html
@@ -319,8 +319,13 @@
         <button class="nav-btn" data-href="page7/page7.html">关于我</button>
        
         <!-- 外部链接跳转 -->
-        <button class="nav-btn" data-href="https://github.com">GitHub</button>
-        <button class="nav-btn" data-href="https://baidu.com">百度</button>
+        <button class="nav-btn" data-href="https://cx3300-1.github.io/sfsfdf/">☆330新版📑</button>
+        <button class="nav-btn" data-href="https://cx3300-1.github.io/ooooka/">330原版</button>
+        <button class="nav-btn" data-href="https://cx3300-1.github.io/npc-hhhhhh/">330 npc版</button>
+        <button class="nav-btn" data-href="https://lisen0905.github.io/330000000/">330 赏饭改版</button>
+        <button class="nav-btn" data-href="https://dodadoda.netlify.app/">☆330 兔改版📑</button>
+        <button class="nav-btn" data-href="https://lisen0905.github.io/zyj/">🐙章鱼 赏饭改版</button>
+        <button class="nav-btn" data-href="https://octopusphone.netlify.app/">🐙章鱼</button>
     </div>
 
     <button class="theme-toggle" id="themeBtn">🌞</button>
